# tap-nhl

./: .editorconfig  .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml  state.json  tox.ini
.github/workflows/: cicd.yml
tap_nhl/: client.py  streams.py  tap.py
tap_nhl/schemas/: conferences.py  divisions.py  draft.py  draft_prospects.py  live_boxscore.py  live_linescore.py  live_plays.py  people.py  schedule.py  seasons.py  shifts.py  stream_schema_object.py  teams.py
tap_nhl/tests/: __init__.py  test_core.py
